--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@ README (quick)
   <body>
     <main class="app">
       <header class="header">
-        <h1>Tic-Tac-Toe</h1>
+        <div class="title-row">
+          <h1>Tic-Tac-Toe</h1>
+          <button id="themeToggle" class="theme-toggle" type="button">
+            Theme: Classic
+          </button>
+        </div>
         <p id="status" class="status" role="status" aria-live="polite">X's turn</p>
       </header>
 
