--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@ README (quick)
       <header class="header">
         <div class="title-row">
           <h1>Tic-Tac-Toe</h1>
-          <button id="themeToggle" class="theme-toggle" type="button">
-            Theme: Classic
-          </button>
+          <div class="controls">
+            <button id="themeToggle" class="theme-toggle" type="button">
+              Theme: Classic
+            </button>
+            <button id="threeDToggle" class="three-d-toggle" type="button">
+              3D: Off
+            </button>
+          </div>
         </div>
         <p id="status" class="status" role="status" aria-live="polite">X's turn</p>
       </header>
